stopped content from being hidden by navbar

--- a/frontend/src/components/Navigation/Navbar.css
+++ b/frontend/src/components/Navigation/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #007BFF; /* Change the background color to blue */
+    background-color: #372772; /* Change the background color to blue */
     color: #ffffff;
     padding: 10px 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
