--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,6 +18,7 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: #E6FAFC;
+  padding-top: 100px;
 }
 
 h1 {
@@ -26,7 +27,7 @@ h1 {
 }
 
 button, .button {
-  background-color: #6BA368; /* Green background */
+  background-color: #747C92; /* Green background */
   border: none; /* Remove borders */
   color: white; /* White text */
   padding: 10px 32px; /* Some padding */
@@ -41,7 +42,7 @@ button, .button {
 }
 
 button:hover, .button:hover {
-  background-color: #515B3A; /* White background */
+  background-color: #3A2449; /* White background */
 }
 
 div {
